--- a/bibleApp.css
+++ b/bibleApp.css
@@ -46,7 +46,7 @@
 html {
     padding: 0;
     font-size: var(--fontsize-main);
-        background: var(--ref-img);
+    background: var(--ref-img);
     font-family: var(--main-font);
 }
 .text_content{
@@ -72,6 +72,9 @@ body {
     margin: 0;
     overflow-y: hidden;
     /* don't add color to the body, it will hide the svg */
+}
+body * {
+    box-sizing: border-box;
 }
 #pagemaster {
     position: fixed;
@@ -207,17 +210,14 @@ code{position: relative; padding-top: 5px;}
     overflow: hidden;
 }
 #refnav #app_settings * {
-    box-sizing: border-box;
     display: block;
 }
 #refnav #app_settings img {
-    box-sizing: border-box;
     margin-left: 1px;
     margin-right: 1px;
     width: var(--width-sidebuttons);
 }
 #refnav #app_settings > button {
-    box-sizing: border-box;
     width:auto;
     min-width:36px;
     padding-left: 2px;
@@ -315,7 +315,6 @@ button {
 }
 #ref_search_versions_holder {display: flex;flex-wrap: wrap;}
 #context_menu {
-    box-sizing: border-box;
     position: absolute;
     background: var(--ref-img);
     border: 1px solid grey;
@@ -641,7 +640,6 @@ main span {
 #searchPreviewWindowFixed,
 #strongsdefinitionwindow,
 #bibleapp_cache {
-    box-sizing: border-box;
     max-width: 300px;
     height: 100%;
     border-right: 2px solid grey;
@@ -665,7 +663,6 @@ main span {
     width: 100%;
     display: table!important;
     border-collapse:collapse;
-    box-sizing: border-box;
 }
 #cache_table td{min-width:40px;}
 #cache_table td button{min-width: 100%;font-weight: bolder;}
@@ -713,7 +710,11 @@ main span {
 .strngsdefinition {
     margin-bottom: 10px;
 }
+#searchPreviewWindowFixed.slidein{
+    display: flex!important;;
+}
 #searchPreviewWindowFixed {
+    flex-direction: column;
     overflow-y: hidden;
     font-size: var(--fontsize-scripture);
 }
@@ -741,11 +742,11 @@ main span {
     display: none !important;
 }
 #searchPreviewFixed {
-    display: table-row;
-    height: 92%;
-    float: left;
-    width: 100%;
-    overflow-y: scroll;
+    /* display: table-row; */
+    /* height: 92%; */
+    /* float: left; */
+    /* width: 100%; */
+    overflow-y: auto;
 }
 #searchPreviewFixed>* {
     display: block;
@@ -967,3 +968,6 @@ span.vmultiple:hover span.vhlt {
         flex-grow: 1;
     }
 }
+/* code:hover>.buttons:hover {
+    background-color: var(--chpt) !important;
+} */
